feat: magnifyImgScaleUpTimes settings

--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -30,6 +30,7 @@
     overflow: hidden;
     width: var(--enlarger-magnify-width);
     height: var(--enlarger-magnify-height);
+    display: none;
 
     &__img {
       position: absolute;
