--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -1,15 +1,17 @@
 .enlarger-container {
   position: relative;
   width: var(--enlarger-width);
+  height: var(--enlarger-height);
 
   .enlarger-main {
     position: relative;
     width: 100%;
+    height: 100%;
 
     &__img {
       display: block;
       width: 100%;
-      height: auto;
+      height: 100%;
     }
 
     &__mask {
