--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -32,7 +32,7 @@
   .enlarger-magnify {
     position: absolute;
     top: 0px;
-    left: calc(var(--enlarger-width) + 10px);
+    left: calc(var(--enlarger-magnify-position-left) + 10px);
     overflow: hidden;
     width: var(--enlarger-magnify-width);
     height: var(--enlarger-magnify-height);
