--- a/src/lib/styles/main.scss
+++ b/src/lib/styles/main.scss
@@ -3,33 +3,33 @@
   width: var(--enlarger-width);
   height: var(--enlarger-height);
 
-  .enlarger-main {
+  .enlarger-image {
     position: relative;
     width: 100%;
     height: 100%;
 
-    &__img {
+    &__inner {
       display: block;
       width: 100%;
       height: 100%;
     }
 
-    &__mask {
+    &__magnifier {
       display: none;
       position: absolute;
       top: 0;
       left: 0;
-      width: var(--enlarger-mask-width);
-      height: var(--enlarger-mask-height);
-      background-color: var(--enlarger-mask-color);
-      border-width: var(--enlarger-mask-border-width);
-      border-style: var(--enlarger-mask-border-style);
-      border-color: var(--enlarger-mask-border-color);
-      cursor: var(--enlarger-mask-cursor);
+      width: var(--enlarger-magnifier-width);
+      height: var(--enlarger-magnifier-height);
+      background-color: var(--enlarger-magnifier-color);
+      border-width: var(--enlarger-magnifier-border-width);
+      border-style: var(--enlarger-magnifier-border-style);
+      border-color: var(--enlarger-magnifier-border-color);
+      cursor: var(--enlarger-magnifier-cursor);
     }
   }
 
-  .enlarger-magnify {
+  .enlarger-preview {
     position: absolute;
     top: 0px;
     left: calc(var(--enlarger-magnify-position-left) + 10px);
@@ -38,7 +38,7 @@
     height: var(--enlarger-magnify-height);
     display: none;
 
-    &__img {
+    &__inner {
       position: absolute;
       display: block;
       width: var(--enlarger-magnify-img-width);
